--- a/2019/2/Cargo.toml
+++ b/2019/2/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "day2"
+name = "intcode"
 version = "0.1.0"
 authors = ["Rob Pilling <robpilling@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
